# duckdb-secp256k1-extension

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: NEXT_README.md  README.md
src/: secp256k1_extension.cpp
src/include/: secp256k1_extension.hpp
test/: README.md
test/sql/: secp256k1.test
